--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,98 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --header-height: 70px;
-  --container-width: 1000px;
+@layer base {
+  :root {
+    --header-height: 70px;
+    --container-width: 1400px;
+
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
+
+    --primary: 204 80% 16%;
+    --primary-foreground: 0 0% 98%;
+
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
+
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
+
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+
+    --border: 0 0% 89.8%;
+    --input: 0 0% 89.8%;
+    --ring: 0 0% 3.9%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 0 0% 3.9%;
+    --foreground: 0 0% 98%;
+
+    --card: 0 0% 3.9%;
+    --card-foreground: 0 0% 98%;
+
+    --popover: 0 0% 3.9%;
+    --popover-foreground: 0 0% 98%;
+
+    --primary: 204 80% 50%;
+    --primary-foreground: 0 0% 9%;
+
+    --secondary: 0 0% 14.9%;
+    --secondary-foreground: 0 0% 98%;
+
+    --muted: 0 0% 14.9%;
+    --muted-foreground: 0 0% 63.9%;
+
+    --accent: 0 0% 14.9%;
+    --accent-foreground: 0 0% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+
+    --border: 0 0% 14.9%;
+    --input: 0 0% 14.9%;
+    --ring: 0 0% 83.1%;
+  }
+
+
+  body {
+    @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .bg-background {
+    @apply bg-[hsl(var(--background))] dark:bg-[hsl(var(--background))];
+  }
+  .bg-foreground {
+    @apply bg-[hsl(var(--foreground))] dark:bg-[hsl(var(--foreground))];
+  }
+  .text-foreground {
+    @apply text-[hsl(var(--foreground))] dark:text-[hsl(var(--foreground))];
+  }
+  .text-muted-foreground {
+    @apply text-[hsl(var(--muted-foreground))] dark:text-[hsl(var(--muted-foreground))];
+  }
+  .bg-card {
+    @apply bg-[hsl(var(--card))] dark:bg-[hsl(var(--card))];
+  }
+  .bg-accent {
+    @apply bg-[hsl(var(--accent))] dark:bg-[hsl(var(--accent))];
+  }
+  .text-accent-foreground {
+    @apply text-[hsl(var(--accent-foreground))] dark:text-[hsl(var(--accent-foreground))];
+  }
 }
